--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "mongodb": "^3.2.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8"
@@ -11,7 +12,7 @@
     "start": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build": "react-scripts build && node tools/replaceBuild.js"
+    "build": "react-scripts build && node src/tools/replaceBuild.js"
   },
   "proxy": "http://localhost:3001",
   "browserslist": [
@@ -21,10 +22,15 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "esm": "^3.2.22",
+    "body-parser": "^1.18.3",
+    "connect": "^3.6.6",
+    "crypto": "^1.0.1",
     "express": "^4.16.4",
     "fs": "0.0.1-security",
     "node-sass": "^4.11.0",
     "react-redux": "^6.0.1",
+    "react-router-dom": "^5.0.0",
     "redux": "^4.0.1"
   }
 }
