--- a/package.json
+++ b/package.json
@@ -3,34 +3,40 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "concurrently": "^4.1.0",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "express": "^4.16.4",
+    "http-errors": "~1.6.2",
+    "http-proxy-middleware": "^0.19.1",
+    "jade": "~1.11.0",
     "mongodb": "^3.2.3",
+    "morgan": "~1.9.0",
+    "node-sass": "^4.11.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-redux": "^7.0.2",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "2.1.8",
+    "redux": "^4.0.1",
+    "body-parser": "^1.18.3",
+    "connect": "^3.6.6",
+    "crypto": "^1.0.1",
+    "esm": "^3.2.22"
   },
   "scripts": {
     "start": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build": "react-scripts build && node src/tools/replaceBuild.js"
+    "build": "react-scripts build",
+    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run start\"",
+    "prod": "NODE_ENV=production node -r esm server/bin/www",
+    "server": "PORT=3001 nodemon -r esm server/bin/www"
   },
-  "proxy": "http://localhost:3001",
   "browserslist": [
     ">0.2%",
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "devDependencies": {
-    "esm": "^3.2.22",
-    "body-parser": "^1.18.3",
-    "connect": "^3.6.6",
-    "crypto": "^1.0.1",
-    "express": "^4.16.4",
-    "fs": "0.0.1-security",
-    "node-sass": "^4.11.0",
-    "react-redux": "^6.0.1",
-    "react-router-dom": "^5.0.0",
-    "redux": "^4.0.1"
-  }
+  ]
 }
