--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
     "cookie-parser": "~1.4.3",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
+    "esm": "^3.2.22",
     "express": "^4.16.4",
     "http-errors": "~1.6.2",
     "http-proxy-middleware": "^0.19.1",
@@ -18,11 +21,7 @@
     "react-redux": "^7.0.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
-    "redux": "^4.0.1",
-    "body-parser": "^1.18.3",
-    "connect": "^3.6.6",
-    "crypto": "^1.0.1",
-    "esm": "^3.2.22"
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
